--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <head>
 <title>Prestige</title>
 <meta charset="utf-8">
+<meta name="google-site-verification" content="KRrEfNwzV-PFdk480DHPUC7WijMHTIsHbeoOyKmYNQY" />
 <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body id="top">
