--- a/pages/Alumni Brothers.html
+++ b/pages/Alumni Brothers.html
@@ -8,7 +8,7 @@ Licence URI: http://www.os-templates.com/template-terms
 -->
 <html>
 <head>
-<title>Prestige | Pages | Full Width</title>
+<title>Alpha Zeta - Alumni Brothers</title>
 <meta charset="utf-8">
 <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
 </head>
@@ -25,27 +25,27 @@ Licence URI: http://www.os-templates.com/template-terms
         <ul>
           <li><a href="Active Brothers.html">Active Brothers</a></li>
           <li><a href="Alumni Brothers.html">Alumni</a></li>
-          <li><a class="drop" href="Family Tree.html">Family Trees</a>
+          <!--<li><a class="drop" href="Family Tree.html">Family Trees</a>
           	<ul>
           		<li><a href="#">169</a></li>
                 <li><a href="#">212</a></li>
                 <li><a href="#">77</a></li>
                 <li><a href="#">MO</a></li>
             </ul>
-          </li>
+          </li> -->
         </ul>
       </li>
       <li><a class="drop" href="Service.html">Services</a>
-        <ul>
+        <!--<ul>
           <li><a href="#">Marching/Concert Band Service</a></li>
           <li><a href="#">Percussion Studio</a>
           </li>
-        </ul>
+        </ul> -->
       </li>
       <li><a href="Photos.html">Photos</a></li>
       <li><a href="Events.html">Events</a></li>
       <li><a href="Contact Us.html">Contact Us</a></li>
-      <li><a href="#">Audio</a></li>
+      <!--<li><a href="#">Audio</a></li> -->
     </ul>
     <!-- ################################################################################################ --> 
   </nav>
@@ -171,7 +171,7 @@ Licence URI: http://www.os-templates.com/template-terms
       </address>
       <ul class="nospace">
         <li class="push10"><span class="icon-time"></span> Email us at:</li>
-        <li><span class="icon-envelope-alt"></span>PBrAlphaZeta?@gmail.com</li>
+        <li><span class="icon-envelope-alt"></span>activewebmaster@pbr-az.com</li>
       </ul>
     </div>
     <div class="one_third">
