--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Licence URI: http://www.os-templates.com/template-terms
 -->
 <html>
 <head>
-<title>Prestige</title>
+<title>Phi Boota roota Alpha Zeta Chapter</title>
 <meta charset="utf-8">
 <meta name="google-site-verification" content="KRrEfNwzV-PFdk480DHPUC7WijMHTIsHbeoOyKmYNQY" />
 <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
@@ -153,7 +153,7 @@ Licence URI: http://www.os-templates.com/template-terms
       </address>
       <ul class="nospace">
         <li class="push10"><span class="icon-time"></span> Email us at:</li>
-        <li><span class="icon-envelope-alt"></span>PBrAlphaZeta?@gmail.com</li>
+        <li><span class="icon-envelope-alt"></span>activewebmaster@pbr-az.com</li>
       </ul>
     </div>
     <div class="one_third">
