--- a/pages/Photos.html
+++ b/pages/Photos.html
@@ -8,7 +8,7 @@ Licence URI: http://www.os-templates.com/template-terms
 -->
 <html>
 <head>
-<title>Prestige | Pages | Full Width</title>
+<title>Alpha Zeta - Photos</title>
 <meta charset="utf-8">
 <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
 </head>
@@ -146,7 +146,7 @@ Licence URI: http://www.os-templates.com/template-terms
       </address>
       <ul class="nospace">
         <li class="push10"><span class="icon-time"></span> Email us at:</li>
-        <li><span class="icon-envelope-alt"></span>PBrAlphaZeta?@gmail.com</li>
+        <li><span class="icon-envelope-alt"></span>activewebmaster@pbr-az.com</li>
       </ul>
     </div>
     <div class="one_third">
