--- a/pages/Contact Us.html
+++ b/pages/Contact Us.html
@@ -87,12 +87,8 @@ Licence URI: http://www.os-templates.com/template-terms
     <!-- container body --> 
     <!-- ########################################################################################## -->
     <h1> - Contact Us</h1>
-   
-    <p>If you have any questions regarding becoming a brother of Phi Boota roota, or would just like to know more information, please feel free to contact us at our email address: PBrAlphaZeta@gmail.com</p>
-    
-    
-
-   <!-- ########################################################################################## --> 
+    <p>If you have any questions regarding becoming a brother of Phi Boota roota, or would just like to know more information, please feel free to contact us at our email address: activewebmaster@pbr-az.com</p>
+    <!-- ########################################################################################## --> 
     <!-- / container body -->
     <div class="clear"></div>
   </main>
