--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@ Licence URI: http://www.os-templates.com/template-terms
       <li><a class="drop" href="pages/About Us.html">About Us</a>
         <ul>
           <li><a href="pages/Active Brothers.html">Active Brothers</a></li>
-          <li><a href="pages/Alumni Brothers.html">Alumni</a></li>
           <!--<li><a class="drop" href="pages/Family Tree.html">Family Trees</a>
           	<ul>
           		<li><a href="#">169</a></li>
@@ -36,7 +35,7 @@ Licence URI: http://www.os-templates.com/template-terms
           </li> -->
         </ul>
       </li>
-     <li><a class="drop" href="pages/Service.html">Services</a>
+     <li><a href="pages/Service.html">Service</a>
         <!--<ul>
           <li><a href="#">Marching/Concert Band Service</a></li>
           <li><a href="#">Percussion Studio</a>
@@ -78,7 +77,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <h2 class="nospace push10 uppercase">Are you an Alumni or recently became alumni!?</h2>
         <p class="nospace">Click the link to have your name listed as an alumni brother, and join the Alumni Association Today!</p>
       </div>
-      <div class="one_quarter"><a class="pad15 center bold uppercase" href="http://phibootaroota.org/">Join Now <span class="icon-arrow-right"></span></a></div>
+      <div class="one_quarter"><a class="pad15 center bold uppercase" href="http://phibootaroota.com/">Join Now <span class="icon-arrow-right"></span></a></div>
     </div>
     <!-- ############################################################################################################# --> 
   </div>
@@ -93,9 +92,13 @@ Licence URI: http://www.os-templates.com/template-terms
     <h1> News </h1>
    
    <hr class="push50">
-   <h1>A new website!</h1>
-   <p> Welcome to this new web page! The address is the same, but the layout is a little bit different. The new layout was created with the expectation of growth and development both within the chapter and on a national level. The previous site was built off a wix template and had many different limitations. Within these limitations was the inability to create a database for current Alumni or to expand each web page as necessary.</p>
-   <p> Along with the new design, many new pages will be implemented. Currently there will be the addition of an audio page to hear the talents of many different brothers of the AZ chapter. Also, there will be pages dedicated to the family trees of each family, so you can know where each brother came from, as well as more in depth pages for service and what the brothers at the Alpha Zeta chapter are all about. Expect more updates to come and please, please, please let me know if there are any issues with the website. you can use the contact us page up top or click <a href="pages/Contact Us.html" title="Conact Us Page">Here to find the email address.</a> Thank you! -FeedBack</p>
+   <h1> Spring Semester in Full Swing - 02/15/17</h1>
+   <p> The spring semester has begun and many events have already been held. The South Eastern United States Honor Bands (SEUS) for high schoolers occured just a couple weeks ago. Brothers served the School of Music in a variety of ways. Some served as percussion assistants for these bands while others simply helped work logistics for equipment relocations. This is also when the Troy University Symphony Band showcases it's premiere spring concert. This semester's concert was titled Firebird. </p>
+   
+   <p> The percussion studio itself has already been home to a couple of guest artists and clinicians. Dr. Luis Rivera of South Alabama University gave a master class during the day and then performed a recital later that night. Another guest clinician to have visited is Dr. Andy Harnsberger from Lee University out of Tennessee. He gave a master class during the day he visited and then assisted with the percussion ensembles rehearsal later that night. </p>
+   
+   <p> Although it has been a busy semester, it is far from done. The percussion studio has a few upcoming events, the biggest being the Alabama Day of Percussion coming Februrary 25th. Additionally, the Troy University Symphonic Band will have a concert the night of February 20th. The brothers themselves have also been hosting rush events for their incoming Spring class, with interviews the night of February 19th. There is a lot going on and it is safe to say the semester is fully underway. Be sure to continue checking the events page for the list of all upcoming events. -FeedBack </p>
+   
    
    <ul class="nospace push50 clear">
    </ul>
