--- a/pages/Events.html
+++ b/pages/Events.html
@@ -21,10 +21,9 @@ Licence URI: http://www.os-templates.com/template-terms
     <!-- ################################################################################################ -->
     <ul class="clear">
       <li class="active"><a href="../index.html">Home</a></li>
-      <li><a class="drop" href="#">About Us</a>
+      <li><a class="drop" href="pages/About Us.html">About Us</a>
         <ul>
           <li><a href="Active Brothers.html">Active Brothers</a></li>
-          <li><a href="Alumni Brothers.html">Alumni</a></li>
           <!--<li><a class="drop" href="Family Tree.html">Family Trees</a>
           	<ul>
           		<li><a href="#">169</a></li>
@@ -35,7 +34,7 @@ Licence URI: http://www.os-templates.com/template-terms
           </li>-->
         </ul>
       </li>
-     <li><a class="drop" href="Service.html">Services</a>
+     <li><a href="pages/Service.html">Service</a>
         <!--<ul>
           <li><a href="#">Marching/Concert Band Service</a></li>
           <li><a href="#">Percussion Studio</a>
