--- a/pages/Alumni Brothers.html
+++ b/pages/Alumni Brothers.html
@@ -21,7 +21,7 @@ Licence URI: http://www.os-templates.com/template-terms
     <!-- ################################################################################################ -->
     <ul class="clear">
       <li class="active"><a href="../index.html">Home</a></li>
-      <li><a class="drop" href="#">About Us</a>
+      <li><a class="drop" href="pages/About Us.html">About Us</a>
         <ul>
           <li><a href="Active Brothers.html">Active Brothers</a></li>
           <li><a href="Alumni Brothers.html">Alumni</a></li>
@@ -35,7 +35,7 @@ Licence URI: http://www.os-templates.com/template-terms
           </li> -->
         </ul>
       </li>
-      <li><a class="drop" href="Service.html">Services</a>
+     <li><a href="pages/Service.html">Service</a>
         <!--<ul>
           <li><a href="#">Marching/Concert Band Service</a></li>
           <li><a href="#">Percussion Studio</a>
@@ -74,7 +74,7 @@ Licence URI: http://www.os-templates.com/template-terms
     <!-- ############################################################################################################# -->
     <ul>
       <li><a href="../index.html">Home</a></li>
-      <li><a href="#">About Us</a></li>
+      <li><a href="pages/About Us.html">About Us</a></li>
       <li><a href="Alumni Brothers.html">Alumni Brothers</a></li>
     </ul>
     <!-- ############################################################################################################# --> 
