--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Licence URI: http://www.os-templates.com/template-terms
     <div class="clear">
       <div class="three_quarter first">
         <h2 class="nospace push10 uppercase">Are you an Alumni or recently became alumni!?</h2>
-        <p class="nospace">Click the link to have your name listed as an alumni brother, and join the Alumni Association Today!</p>
+        <p class="nospace">Click the link to get involved as an alumni brother, and join the Alumni Association Today!</p>
       </div>
       <div class="one_quarter"><a class="pad15 center bold uppercase" href="http://phibootaroota.com/">Join Now <span class="icon-arrow-right"></span></a></div>
     </div>
@@ -93,11 +93,13 @@ Licence URI: http://www.os-templates.com/template-terms
    
    <hr class="push50">
    <h1> Spring Semester in Full Swing - 02/15/17</h1>
-   <p> The spring semester has begun and many events have already been held. The South Eastern United States Honor Bands (SEUS) for high schoolers occured just a couple weeks ago. Brothers served the School of Music in a variety of ways. Some served as percussion assistants for these bands while others simply helped work logistics for equipment relocations. This is also when the Troy University Symphony Band showcases it's premiere spring concert. This semester's concert was titled Firebird. </p>
+   <p> The spring semester has begun and many events have already been held. The South Eastern United States Honor Bands (SEUS) for high schoolers took place just a couple weeks ago. Brothers served the School of Music in a variety of ways. Some served as percussion assistants for these bands while others simply helped work logistics for equipment relocations. This is also when the Troy University Symphony Band showcases it's premiere spring concert. This semester's concert was titled Firebird. </p>
    
    <p> The percussion studio itself has already been home to a couple of guest artists and clinicians. Dr. Luis Rivera of South Alabama University gave a master class during the day and then performed a recital later that night. Another guest clinician to have visited is Dr. Andy Harnsberger from Lee University out of Tennessee. He gave a master class during the day he visited and then assisted with the percussion ensembles rehearsal later that night. </p>
    
-   <p> Although it has been a busy semester, it is far from done. The percussion studio has a few upcoming events, the biggest being the Alabama Day of Percussion coming Februrary 25th. Additionally, the Troy University Symphonic Band will have a concert the night of February 20th. The brothers themselves have also been hosting rush events for their incoming Spring class, with interviews the night of February 19th. There is a lot going on and it is safe to say the semester is fully underway. Be sure to continue checking the events page for the list of all upcoming events. -FeedBack </p>
+   <p> Although it has been a busy semester, it is far from done. The percussion studio has a few upcoming events, the biggest being the Alabama Day of Percussion coming Februrary 25th. Additionally, the Troy University Symphonic Band will have a concert the night of February 20th. The brothers themselves have also been hosting rush events for their incoming Spring class, with interviews the night of February 19th. There is a lot going on and it is safe to say the semester is fully underway. Be sure to continue checking the events page for the list of all upcoming events. -FeedBack <a href="pages/News Page.html" title="News Page">Click for Older Stories.</a></p>
+   
+
    
    
    <ul class="nospace push50 clear">
@@ -106,22 +108,22 @@ Licence URI: http://www.os-templates.com/template-terms
    </ul>
     
     <ul class="nospace push50 clear">
-      <li class="one_third borderedbox lt_bg first"><a href="#"><img src="images/demo/Ensemble.jpg" alt=""></a>
+      <li class="one_third borderedbox lt_bg first"><a href="pages/Abous Us.html"><img src="images/demo/Ensemble.jpg" alt=""></a>
         <div class="pad30">
           <h2 class="uppercase nospace push15">Brother's Lives!</h2>
-          <p class="nospace">See what activities brothers do on a daily basis and what activities they are involved in on campus!<a href="#"><span class="icon-arrow-right"></span></a></p>
+          <p class="nospace">See what activities brothers do on a daily basis and what activities they are involved in on campus!<a href="pages/Abous Us.html"><span class="icon-arrow-right"></span></a></p>
         </div>
       </li>
-      <li class="one_third borderedbox lt_bg"><a href="#"><img src="images/demo/Brother Activities.jpg" alt=""></a>
+      <li class="one_third borderedbox lt_bg"><a href="pages/Events.html"><img src="images/demo/Brother Activities.jpg" alt=""></a>
         <div class="pad30">
           <h2 class="uppercase nospace push15">Brother Activities!</h2>
           <p class="nospace">Brothers are involved in a lot of activities on campus and put on a number of events themselves. Check up the upcoming events!<a href="pages/Events.html"><span class="icon-arrow-right"></span></a></p>
         </div>
       </li>
-      <li class="one_third borderedbox lt_bg"><a href="#"><img src="images/demo/Service Matters.jpg" alt=""></a>
+      <li class="one_third borderedbox lt_bg"><a href="pages/Service.html"><img src="images/demo/Service Matters.jpg" alt=""></a>
         <div class="pad30">
           <h2 class="uppercase nospace push15">Service Matters</h2>
-          <p class="nospace">The brothers of Phi Boota roota are dedicated to the school of music! See here!<a href="#"><span class="icon-arrow-right"></span></a></p>
+          <p class="nospace">The brothers of Phi Boota roota are dedicated to the school of music! See here!<a href="pages/Service.html"><span class="icon-arrow-right"></span></a></p>
         </div>
       </li>
     </ul>
@@ -165,7 +167,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <li class="clear push30">
           <div class="imgl"><img src="images/demo/Gordon Stout Clinic.jpg" alt=""></div>
           See pictures from our Gordon Stout Clinic!
-          <p class="nospace"><a href="#">Read more &raquo;</a></p>
+          <p class="nospace"><a href="pages/Photos">See Here &raquo;</a></p>
         </li>
       </ul>
     </div>
