--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@ Licence URI: http://www.os-templates.com/template-terms
    </ul>
     
     <ul class="nospace push50 clear">
-      <li class="one_third borderedbox lt_bg first"><a href="pages/Abous Us.html"><img src="images/demo/Ensemble.jpg" alt=""></a>
+      <li class="one_third borderedbox lt_bg first"><a href="pages/About Us.html"><img src="images/demo/Ensemble.jpg" alt=""></a>
         <div class="pad30">
           <h2 class="uppercase nospace push15">Brother's Lives!</h2>
-          <p class="nospace">See what activities brothers do on a daily basis and what activities they are involved in on campus!<a href="pages/Abous Us.html"><span class="icon-arrow-right"></span></a></p>
+          <p class="nospace">See what activities brothers do on a daily basis and what activities they are involved in on campus!<a href="pages/About Us.html"><span class="icon-arrow-right"></span></a></p>
         </div>
       </li>
       <li class="one_third borderedbox lt_bg"><a href="pages/Events.html"><img src="images/demo/Brother Activities.jpg" alt=""></a>
@@ -167,7 +167,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <li class="clear push30">
           <div class="imgl"><img src="images/demo/Gordon Stout Clinic.jpg" alt=""></div>
           See pictures from our Gordon Stout Clinic!
-          <p class="nospace"><a href="pages/Photos">See Here &raquo;</a></p>
+          <p class="nospace"><a href="pages/Photos.html">See Here &raquo;</a></p>
         </li>
       </ul>
     </div>
