--- a/pages/Contact Us.html
+++ b/pages/Contact Us.html
@@ -117,7 +117,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <li class="clear push30">
           <div class="imgl"><img src="../images/demo/Gordon Stout Clinic.jpg" alt=""></div>
           See pictures from our Gordon Stout Clinic!
-          <p class="nospace"><a href="pages/Photos">See Here &raquo;</a></p>
+          <p class="nospace"><a href="pages/Photos.html">See Here &raquo;</a></p>
         </li>
       </ul>
     </div>
