--- a/pages/Service.html
+++ b/pages/Service.html
@@ -72,8 +72,8 @@ Licence URI: http://www.os-templates.com/template-terms
   <div id="breadcrumb"> 
     <!-- ############################################################################################################# -->
     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Service</a></li>
+      <li><a href="../index.html">Home</a></li>
+      <li><a href="pages/Contact Us.html">Service</a></li>
     </ul>
     <!-- ############################################################################################################# --> 
   </div>
@@ -139,7 +139,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <li class="clear push30">
           <div class="imgl"><img src="../images/demo/Gordon Stout Clinic.jpg" alt=""></div>
           See pictures from our Gordon Stout Clinic!
-          <p class="nospace"><a href="pages/Photos">See Here &raquo;</a></p>
+          <p class="nospace"><a href="pages/Photos.html">See Here &raquo;</a></p>
         </li>
       </ul>
     </div>
