--- a/pages/About Us.html
+++ b/pages/About Us.html
@@ -74,8 +74,7 @@ Licence URI: http://www.os-templates.com/template-terms
     <!-- ############################################################################################################# -->
     <ul>
       <li><a href="../index.html">Home</a></li>
-      <li><a href="#">About Us</a></li>
-      <li><a href="Active Brothers.html">Active Brothers</a></li>
+      <li><a href="About Us.html">About Us</a></li>
     </ul>
     <!-- ############################################################################################################# --> 
   </div>
@@ -130,7 +129,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <li class="clear push30">
           <div class="imgl"><img src="../images/demo/Gordon Stout Clinic.jpg" alt=""></div>
           See pictures from our Gordon Stout Clinic!
-          <p class="nospace"><a href="#">Read more &raquo;</a></p>
+          <p class="nospace"><a href="Photos.html">See Here &raquo;</a></p>
         </li>
       </ul>
     </div>
