--- a/pages/Events.html
+++ b/pages/Events.html
@@ -21,7 +21,7 @@ Licence URI: http://www.os-templates.com/template-terms
     <!-- ################################################################################################ -->
     <ul class="clear">
       <li class="active"><a href="../index.html">Home</a></li>
-      <li><a class="drop" href="pages/About Us.html">About Us</a>
+      <li><a class="drop" href="About Us.html">About Us</a>
         <ul>
           <li><a href="Active Brothers.html">Active Brothers</a></li>
           <!--<li><a class="drop" href="Family Tree.html">Family Trees</a>
@@ -34,7 +34,7 @@ Licence URI: http://www.os-templates.com/template-terms
           </li>-->
         </ul>
       </li>
-     <li><a href="pages/Service.html">Service</a>
+     <li><a href="Service.html">Service</a>
         <!--<ul>
           <li><a href="#">Marching/Concert Band Service</a></li>
           <li><a href="#">Percussion Studio</a>
@@ -119,7 +119,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <li class="clear push30">
           <div class="imgl"><img src="../images/demo/Gordon Stout Clinic.jpg" alt=""></div>
           See pictures from our Gordon Stout Clinic!
-          <p class="nospace"><a href="pages/Photos.html">See Here &raquo;</a></p>
+          <p class="nospace"><a href="Photos.html">See Here &raquo;</a></p>
         </li>
       </ul>
     </div>
