--- a/pages/News Page.html
+++ b/pages/News Page.html
@@ -34,7 +34,7 @@ Licence URI: http://www.os-templates.com/template-terms
           </li> -->
         </ul>
       </li>
-     <li><a href="pages/Service.html">Service</a>
+     <li><a href="Service.html">Service</a>
         <!--<ul>
           <li><a href="#">Marching Band Service</a></li>
           <li><a href="#">Concert Band Service</a>
@@ -73,7 +73,7 @@ Licence URI: http://www.os-templates.com/template-terms
     <!-- ############################################################################################################# -->
     <ul>
       <li><a href="../index.html">Home</a></li>
-      <li><a href="pages/News Page.html">Past Stories</a></li>
+      <li><a href="News Page.html">Past Stories</a></li>
     </ul>
     <!-- ############################################################################################################# --> 
   </div>
@@ -92,7 +92,7 @@ Licence URI: http://www.os-templates.com/template-terms
    	<h1> New Page -08/15/15 </h1>
     
     <p> Welcome to this new web page! The address is the same, but the layout is a little bit different. The new layout was created with the expectation of growth and development both within the chapter and on a national level. The previous site was built off a wix template and had many different limitations. Within these limitations was the inability to create a database for current Alumni or to expand each web page as necessary.</p>
-   <p> Along with the new design, many new pages will be implemented. Currently there will be the addition of an audio page to hear the talents of many different brothers of the AZ chapter. Also, there will be pages dedicated to the family trees of each family, so you can know where each brother came from, as well as more in depth pages for service and what the brothers at the Alpha Zeta chapter are all about. Expect more updates to come and please, please, please let me know if there are any issues with the website. you can use the contact us page up top or click <a href="pages/Contact Us.html" title="Conact Us Page">Here to find the email address.</a> Thank you! -FeedBack </p>
+   <p> Along with the new design, many new pages will be implemented. Currently there will be the addition of an audio page to hear the talents of many different brothers of the AZ chapter. Also, there will be pages dedicated to the family trees of each family, so you can know where each brother came from, as well as more in depth pages for service and what the brothers at the Alpha Zeta chapter are all about. Expect more updates to come and please, please, please let me know if there are any issues with the website. you can use the contact us page up top or click <a href="Contact Us.html" title="Conact Us Page">Here to find the email address.</a> Thank you! -FeedBack </p>
 
 
 
@@ -131,7 +131,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <li class="clear push30">
           <div class="imgl"><img src="../images/demo/Gordon Stout Clinic.jpg" alt=""></div>
           See pictures from our Gordon Stout Clinic!
-          <p class="nospace"><a href="pages/Photos.html">See Here &raquo;</a></p>
+          <p class="nospace"><a href="Photos.html">See Here &raquo;</a></p>
         </li>
       </ul>
     </div>
