--- a/pages/Service.html
+++ b/pages/Service.html
@@ -34,7 +34,7 @@ Licence URI: http://www.os-templates.com/template-terms
           </li> -->
         </ul>
       </li>
-     <li><a href="pages/Service.html">Service</a>
+     <li><a href="Service.html">Service</a>
         <!--<ul>
           <li><a href="#">Marching Band Service</a></li>
           <li><a href="#">Concert Band Service</a>
@@ -73,7 +73,7 @@ Licence URI: http://www.os-templates.com/template-terms
     <!-- ############################################################################################################# -->
     <ul>
       <li><a href="../index.html">Home</a></li>
-      <li><a href="pages/Contact Us.html">Service</a></li>
+      <li><a href="Contact Us.html">Service</a></li>
     </ul>
     <!-- ############################################################################################################# --> 
   </div>
